--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -4,6 +4,8 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1"/>
     <httpRuntime targetFramework="4.8.1"/>
@@ -21,11 +23,11 @@
         <binding name="NotificacionWSPortBinding" />
         <binding name="UsuarioWSPortBinding" />
         <binding name="ClienteWSPortBinding" />
-        <binding name="LocalWSPortBinding" />
         <binding name="EmpleadoWSPortBinding" />
         <binding name="InventarioWSPortBinding" />
         <binding name="PedidoWSPortBinding" />
         <binding name="ComprobanteWSPortBinding" />
+        <binding name="LocalWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -38,9 +40,6 @@
       <endpoint address="http://localhost:8080/FrutillaWS/ClienteWS"
         binding="basicHttpBinding" bindingConfiguration="ClienteWSPortBinding"
         contract="ClienteWS.ClienteWS" name="ClienteWSPort" />
-      <endpoint address="http://localhost:8080/FrutillaWS/LocalWS"
-        binding="basicHttpBinding" bindingConfiguration="LocalWSPortBinding"
-        contract="LocalWS.LocalWS" name="LocalWSPort" />
       <endpoint address="http://localhost:8080/FrutillaWS/EmpleadoWS"
         binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
         contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
@@ -53,6 +52,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/ComprobanteWS"
         binding="basicHttpBinding" bindingConfiguration="ComprobanteWSPortBinding"
         contract="ComprobanteWS.ComprobanteWS" name="ComprobanteWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/LocalWS"
+        binding="basicHttpBinding" bindingConfiguration="LocalWSPortBinding"
+        contract="LocalWS.LocalWS" name="LocalWSPort" />
     </client>
   </system.serviceModel>
   <system.codedom>
