Cambios para ProductoImagen y ubicacion de Notificacioes

--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -28,6 +28,7 @@
         <binding name="PedidoWSPortBinding" />
         <binding name="ComprobanteWSPortBinding" />
         <binding name="LocalWSPortBinding" />
+        <binding name="ProductoImagenWSPortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -55,6 +56,9 @@
       <endpoint address="http://localhost:8080/FrutillaWS/LocalWS"
         binding="basicHttpBinding" bindingConfiguration="LocalWSPortBinding"
         contract="LocalWS.LocalWS" name="LocalWSPort" />
+      <endpoint address="http://localhost:8080/FrutillaWS/ProductoImagenWS"
+        binding="basicHttpBinding" bindingConfiguration="ProductoImagenWSPortBinding"
+        contract="ProductoImagenWS.ProductoImagenWS" name="ProductoImagenWSPort" />
     </client>
   </system.serviceModel>
   <system.codedom>
