--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
@@ -305,11 +305,42 @@
     <None Include="Connected Services\PedidoWS\PedidoWS.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.actualizarProductoImagenResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.agregarProductoImagenResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.eliminarProductoImagenResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.listarProductoImagenResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.obtenerProductoImagenResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.productoImagen.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ProductoImagenWS\LocalWebService.ProductoImagenWS.obtenerUrlPorTipoResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\ProductoImagenWS\ProductoImagenWS.wsdl" />
+    <None Include="Connected Services\ProductoImagenWS\ProductoImagenWS.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\UsuarioWS\configuration91.svcinfo" />
     <None Include="Connected Services\UsuarioWS\configuration.svcinfo" />
     <None Include="Connected Services\PedidoWS\configuration91.svcinfo" />
     <None Include="Connected Services\PedidoWS\configuration.svcinfo" />
     <None Include="Connected Services\PedidoWS\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\ProductoImagenWS\configuration91.svcinfo" />
+    <None Include="Connected Services\ProductoImagenWS\configuration.svcinfo" />
+    <None Include="Connected Services\ProductoImagenWS\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -350,8 +381,8 @@
     <Content Include="ListaVentasSupervisor.aspx" />
     <Content Include="LocalSupervisor.aspx" />
     <Content Include="Login.aspx" />
-    <Content Include="Notificaciones\ClienteNotificaciones.aspx" />
-    <Content Include="Notificaciones\ListarNotificaciones.aspx" />
+    <Content Include="ClienteNotificaciones.aspx" />
+    <Content Include="ListarNotificaciones.aspx" />
     <Content Include="Public\css\bootstrap-grid.css" />
     <Content Include="Public\css\bootstrap-grid.min.css" />
     <Content Include="Public\css\bootstrap-grid.rtl.css" />
@@ -516,6 +547,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\ProductoImagenWS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\UsuarioWS\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -585,18 +621,18 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Notificaciones\ClienteNotificaciones.aspx.cs">
+    <Compile Include="ClienteNotificaciones.aspx.cs">
       <DependentUpon>ClienteNotificaciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Notificaciones\ClienteNotificaciones.aspx.designer.cs">
+    <Compile Include="ClienteNotificaciones.aspx.designer.cs">
       <DependentUpon>ClienteNotificaciones.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Notificaciones\ListarNotificaciones.aspx.cs">
+    <Compile Include="ListarNotificaciones.aspx.cs">
       <DependentUpon>ListarNotificaciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Notificaciones\ListarNotificaciones.aspx.designer.cs">
+    <Compile Include="ListarNotificaciones.aspx.designer.cs">
       <DependentUpon>ListarNotificaciones.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -686,6 +722,7 @@
     <WCFMetadataStorage Include="Connected Services\LocalWS\" />
     <WCFMetadataStorage Include="Connected Services\NotificionesWS\" />
     <WCFMetadataStorage Include="Connected Services\PedidoWS\" />
+    <WCFMetadataStorage Include="Connected Services\ProductoImagenWS\" />
     <WCFMetadataStorage Include="Connected Services\UsuarioWS\" />
   </ItemGroup>
   <PropertyGroup>
