--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -83,4 +83,11 @@
 			</authorization>
 		</system.web>
 	</location>
+	<location path="VerificarCodigo.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
