--- a/Frutilla/FrutillaWS/pom.xml
+++ b/Frutilla/FrutillaWS/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>FrutillaPersistencia</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
     
     <build>
