--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/web.config
@@ -8,7 +8,7 @@
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1"/>
-    <httpRuntime targetFramework="4.8.1"/>
+    <httpRuntime maxRequestLength="10240" executionTimeout="3600" targetFramework="4.8.1"/>
 	  
 	<authentication mode="Forms">
 		<forms loginUrl="Login.aspx" timeout="30"/>
