Revert "Merge pull request #121 from amvz1704/ClassGabo"
This reverts commit ac04af581f12fc2842a11239d831d2769a962908, reversing
changes made to 6f6eb82858ffc2ff1323038e4c60e12e4fe5c902.

--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/LocalWebService.csproj
@@ -216,6 +216,7 @@
     </Content>
     <None Include="Connected Services\InventarioWS\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Connected Services\EmpleadoWS\EmpleadoWS.wsdl" />
     <None Include="Connected Services\EmpleadoWS\EmpleadoWS.xsd">
